tests/errors/kind_01.f90
program kind_01
    implicit none
    print *, aint([1.0, 2.0, 3.0], [4, 4])
end